...
                        }
                    }
            } else {
                sourcesList
            }
        }
        .navigationTitle("Hagda")
        .toolbar {
            #if os(iOS) || os(visionOS)
            ToolbarItem(placement: .topBarLeading) {
                Button {
                    showSettings = true
                } label: {
...
